objects/CN_Competitor_Product_Price_to_Customer__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Customer_Category__c</fullName>
        <formula>TEXT(CN_Account_Name__r.CN_Category__c)</formula>
        <label>Customer Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Date__c</fullName>
        <formula>CN_Account_Name__r.LastModifiedDate</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Account_Delivery_Plant__c</fullName>
        <formula>TEXT(CN_Account_Name__r.CN_Delivery_Plant__c)</formula>
        <label>Delivery plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Product Price for Customer</relationshipLabel>
        <relationshipName>Competitor_Price_to_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Plant__c</fullName>
        <label>Delivery plant</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CTN__c</fullName>
        <label>CTN(incl. TAX)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_City__c</fullName>
        <formula>CN_Account_Name__r.CN_City_CN__r.CN_City_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>CN_Competitor_Product__c</referenceTo>
        <relationshipLabel>Competitor Product Price for Customer</relationshipLabel>
        <relationshipName>Competitor_Price_to_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Category__c</fullName>
        <label>Customer Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>CN_Account_Name__r.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_EA__c</fullName>
        <label>EA(incl. TAX)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Opportuntiy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportuntiy</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor Product Price for Customer</relationshipLabel>
        <relationshipName>Competitor_Product_Price_for_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Product_Category__c</fullName>
        <formula>CN_Competitor__r.CN_Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Name__c</fullName>
        <formula>CN_Competitor__r.CN_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Competitor Product Price for Customer</relationshipLabel>
        <relationshipName>Competitor_Product_Price_for_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>South</fullName>
                    <default>true</default>
                    <label>South</label>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Specification__c</fullName>
        <formula>CN_Competitor__r.CN_Specification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specification</label>
        <type>Text</type>
    </fields>
    <label>Competitor Product Price for Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Product_Name__c</columns>
        <columns>CN_Product_Category__c</columns>
        <columns>CN_Specification__c</columns>
        <columns>CN_Account_Name__c</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_CTN__c</columns>
        <columns>CN_EA__c</columns>
        <columns>CN_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_View_Test01</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All View_Test01</label>
        <sharedTo>
            <group>CN_CCE_Sales_MDM</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CPN-{0000}</displayFormat>
        <label>Competitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Product Price for Customer</pluralLabel>
    <recordTypes>
        <fullName>CN_Competitor_Price_to_Customer_Layout</fullName>
        <active>true</active>
        <label>CN Competitor Price to Customer Layout</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_CPP_Check_EA_OR_CTN</fullName>
        <active>true</active>
        <description>Either EA or CTN is required</description>
        <errorConditionFormula>AND(
  ISBLANK(CN_CTN__c),
  ISBLANK(CN_EA__c)
)</errorConditionFormula>
        <errorMessage>Either EA or CTN is required</errorMessage>
    </validationRules>
</CustomObject>